provision/k8s/system/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: loki
spec:
  type: LoadBalancer
  ports:
    - port: 3100
      targetPort: 3100
  selector:
    app: loki
